--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,14 @@
     <string name="install">Install</string>
     <string name="pattern_lock">Pattern Lock</string>
     <string name="app_limits">App Limits</string>
+    <string name="feedback">Feedback</string>
+
+
+    <string name="app_rating">App Rating</string>
+    <string name="app_rating_sum">If you like this app, please rate 5* to support development team.\nThank you very much.</string>
+    <string name="rating_dialog_maybe_later">MaybeLater</string>
+    <string name="send">Send</string>
+    <string name="cancel">Cancel</string>
+    <string name="start">Start</string>
 
 </resources>
